...
    android:layout_width="match_parent"
    android:layout_height="72dp"
    tools:keep="@layout/sheet_colorsettings"
    android:background="?attr/colorSurface">

    <ImageButton
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/undo"
        android:padding="8dp"
        android:src="@drawable/ic_chevron_left_black_24dp"
...
